<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.angrygoat</groupId>
	<artifactId>gabble-j-pom</artifactId>
	<packaging>pom</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>Gabble POM</name>
	<description>Master POM for Gabble projects</description>
	<url>https://github.com/angrygoat/gabble-j</url>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<sl4j.version>1.7.25</sl4j.version>
		<log4j.version>1.2.17</log4j.version>
		<java.version>11</java.version>
		<maven.war.plugin.version>3.0.0</maven.war.plugin.version>
		<netty.version>4.1.42.Final</netty.version>
	</properties>
	<issueManagement>
		<system>Git</system>
		<url>https://github.com/angrygoat/gabble-j/issues</url>
	</issueManagement>
	<scm>
		<connection>scm:git:https://github.com/angrygoat/gabble-j.git</connection>
		<url>https://github.com/angrygoat/gabble-j.git</url>
		<developerConnection>scm:git:https://github.com/angrygoat/gabble-j.git</developerConnection>
	</scm>
	<organization>
		<name>AngryGoat</name>
		<url>https://github.com/angrygoat</url>
	</organization>
	<developers>
		<developer>
			<id>mconway</id>
			<name>Mike Conway</name>
			<email>michael.c.conway@gmail.com</email>
			<url>https://github.com/angrygoat</url>
			<organization>AngryGoat</organization>
			<organizationUrl>https://github.com/angrygoat</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
	</developers>
	<repositories>
		<repository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net Repository for Maven</name>
			<url>http://download.java.net/maven/2/</url>
			<layout>default</layout>
		</repository>
	</repositories>
	<distributionManagement>

	</distributionManagement>
	<reporting>
		<plugins>

		</plugins>
	</reporting>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.netty</groupId>
				<artifactId>netty-all</artifactId>
				<version>${netty.version}</version>
			</dependency>
			<dependency>
				<groupId>org.javassist</groupId>
				<artifactId>javassist</artifactId>
				<version>3.23.1-GA</version>
			</dependency>
			<dependency>
				<groupId>cglib</groupId>
				<artifactId>cglib-nodep</artifactId>
				<version>3.2.7</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<pluginManagement>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine> --illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine> --illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>${java.version}</release>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
